pre-calculate logo height to avoid content jumping
* calculate on load
* re-calculate on resize

--- a/content/stylesheets/_layout/_default.scss
+++ b/content/stylesheets/_layout/_default.scss
@@ -5,7 +5,7 @@
     margin-bottom: 68px;
 
     .logo {
-      max-width: 120%;
+      width: 100%;
       margin: 0;
     }
 
